Fix spacing

--- a/src/main/webapp/css/page.css
+++ b/src/main/webapp/css/page.css
@@ -60,7 +60,7 @@
 
 .netcost-list-item {
   padding-top: 0px;
-  padding-bottom: 0px;
+  padding-bottom: 16px;
 }
 
 .title {
